force-app/main/default/objects/SelaProduct__c/SelaProduct__c.object-meta.xml
<CustomObject>
    <label>SELA Product</label>
    <nameField>
        <label>SELA Product Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>