force-app/main/default/objects/SelaProduct__c/fields/AddOnSubscriptionMonthly__c.field-meta.xml
<CustomField>
    <fullName>AddOnSubscriptionMonthly__c</fullName>
    <label>Add On Subscription (Monthly)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>