force-app/main/default/objects/SelaProduct__c/fields/AddOnSubscriptionYearly__c.field-meta.xml
<CustomField>
    <fullName>AddOnSubscriptionYearly__c</fullName>
    <label>Add On Subscription (Yearly)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>