force-app/main/default/objects/SelaProduct__c/fields/AT__c.field-meta.xml
<CustomField>
    <fullName>AT__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AT</label>
    <type>Checkbox</type>
</CustomField>