force-app/main/default/objects/SelaProduct__c/fields/DCGroup__c.field-meta.xml
<CustomField>
    <fullName>DCGroup__c</fullName>
    <label>DC Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>