force-app/main/default/objects/SelaProduct__c/fields/DCrate__c.field-meta.xml
<CustomField>
    <fullName>DCrate__c</fullName>
    <label>DC rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>