force-app/main/default/objects/SelaProduct__c/fields/EM__c.field-meta.xml
<CustomField>
    <fullName>EM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EM</label>
    <type>Checkbox</type>
</CustomField>