force-app/main/default/objects/SelaProduct__c/fields/ListDcRate__c.field-meta.xml
<CustomField>
    <fullName>ListDcRate__c</fullName>
    <label>List DC Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>