force-app/main/default/objects/SelaProduct__c/fields/ListPriceMonthly__c.field-meta.xml
<CustomField>
    <fullName>ListPriceMonthly__c</fullName>
    <label>ListPrice (Monthly)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>