force-app/main/default/objects/SelaProduct__c/fields/ListPriceYearly__c.field-meta.xml
<CustomField>
    <fullName>ListPriceYearly__c</fullName>
    <label>ListPrice (Yearly)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>