force-app/main/default/objects/SelaProduct__c/fields/PSP__c.field-meta.xml
<CustomField>
    <fullName>PSP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PSP</label>
    <type>Checkbox</type>
</CustomField>