force-app/main/default/objects/SelaProduct__c/fields/Remain_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Remain_Quantity__c</fullName>
    <label>Remain Quantity</label>
    <summarizedField>SelaProductLineItem__c.Quantity__c</summarizedField>
    <summaryForeignKey>SelaProductLineItem__c.SELAProduct__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>