force-app/main/default/objects/SelaProduct__c/fields/SB__c.field-meta.xml
<CustomField>
    <fullName>SB__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SB</label>
    <type>Checkbox</type>
</CustomField>