force-app/main/default/objects/SelaProduct__c/fields/SubscriptionDcRate__c.field-meta.xml
<CustomField>
    <fullName>SubscriptionDcRate__c</fullName>
    <label>SubscriptionDcRate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>