force-app/main/default/objects/SelaProduct__c/fields/SubscriptionMonthly__c.field-meta.xml
<CustomField>
    <fullName>SubscriptionMonthly__c</fullName>
    <label>Subscription (Monthly)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>