force-app/main/default/objects/SelaProduct__c/fields/SubscriptionYearly__c.field-meta.xml
<CustomField>
    <fullName>SubscriptionYearly__c</fullName>
    <label>Subscription (Yearly)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>