force-app/main/default/objects/SelaProduct__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>TotalQuantity__c</columns>
    <columns>SubscriptionYearly__c</columns>
    <columns>AddOnSubscriptionYearly__c</columns>
    <columns>AT__c</columns>
    <columns>EM__c</columns>
    <columns>PSP__c</columns>
    <columns>SB__c</columns>
    <columns>ListPriceYearly__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>